# functional

./: .appveyor.yml  .travis.yml  CMakeLists.txt  identity.html  index.html
.drone/: drone.sh
.github/workflows/: ci.yml
factory/doc/: factory.qbk
factory/test/: factory_allocator_throws.cpp  factory_default_allocator.cpp
include/boost/: functional.hpp
include/boost/functional/: factory.hpp  identity.hpp  lightweight_forward_adapter.hpp
meta/: libraries.json
test/: Jamfile.v2  function_test.cpp  identity_rvalue_test.cpp  identity_test.cpp
